gosxappinfo: Fix typo in ifdef

https://bugzilla.gnome.org/show_bug.cgi?id=780300